#AWE-4000R Project

noinst_LIBRARIES = libaweapp.a

libaweapp_a_SOURCES = CGlobalArgLib.cpp  OperateDiskProc.cpp ClearDepotFunc.cpp DataClassDesign.cpp DataTransformFunc.cpp

SUBDIRS = JSKMANAGE YWXML SERVXML COMMON SKJYWXML

INCLUDES = -I../LIBDB -I../LIB -I../SYS -I../DRV -I./JSKMANAGE -I./YWXML -I./SERVXML -I./COMMON -I./ -I../SERIAL -I./SKJYWXML
