#AWE-4000R Project

noinst_LIBRARIES = libawedb.a

#libawedb_a_SOURCES = CUserInfo.cpp CDept.cpp CInvDet.cpp CInvHead.cpp CRtInv.cpp CInvVol.cpp CMachine.cpp COperator.cpp CRtInv.cpp CSysArg.cpp CSysLog.cpp  CClient.cpp CCbhz.cpp CInvKind.cpp CUserMore.cpp CInvServ.cpp CPrnInfo.cpp CInvSum.cpp CInvSort.cpp CTable.cpp CDB.cpp CMessage.cpp CHyxx.cpp
libawedb_a_SOURCES = CUserInfo.cpp CInvDet.cpp CInvHead.cpp CRtInv.cpp CInvVol.cpp  CRtInv.cpp CSysArg.cpp CInvKind.cpp CUserMore.cpp CInvServ.cpp CTable.cpp CDB.cpp CTax.cpp CNetPara.cpp 

INCLUDES = -I../SYS -I../DRV -I../LIB -I./

