#AWE-4000R Project

noinst_LIBRARIES = libserial.a

libserial_a_SOURCES = CUniversialSerialCommunicate.cpp SerialProtocol.cpp serial.c selfTest.c  TypeConvertation.cpp 

INCLUDES = -I./ -I../DRV -I../LIBDB -I../LIB -I../SYS -I../APP  -I../APP/COMMON -I../APP/INVMANAGE -I../APP/JSKMANAGE  -I../APP/SERVXML -I../APP/YWXML
