#AWE-4000R Project

noinst_LIBRARIES = libawesys.a

#libawesys_a_SOURCES = CSerialProtocol.cpp CWrSysLog.cpp TDateTime.cpp xmlbase.cpp tinyxml.cpp tinyxmlparser.cpp tinyxmlerror.cpp tinystr.cpp idea.cpp cJSON.c pos_debug.c pos_log.c gZip.c md5c.c des.c rsaFunc.c base64.c arithmetic.c commonFunc.c 
libawesys_a_SOURCES = CWrSysLog.cpp TDateTime.cpp xmlbase.cpp tinyxml.cpp tinyxmlparser.cpp tinyxmlerror.cpp tinystr.cpp pos_debug.c pos_log.c gZip.c md5c.c base64.c arithmetic.c commonFunc.c textParse.cpp aes.cpp

INCLUDES = -I./ -I../DRV  -I../INC
