#AWE-4000R Project

noinst_LIBRARIES = libawecommon.a

#libawecommon_a_SOURCES = SaleBusinessFunc.cpp InvBusinessFunc.cpp DeclareBusinessFunc.cpp ManageBusinessFunc.cpp BusinessJSKProc.cpp BusinessXmlProc.cpp BusinessBase.cpp YWXMLGY.cpp
libawecommon_a_SOURCES = 

INCLUDES = -I../../SYS -I../../DRV -I../../LIBDB -I../../LIB -I../ -I./ -I../YWXML -I../SKJYWXML -I../INVMANAGE -I../JSKMANAGE -I../SERVXML
