#AWE-4000R Project

noinst_LIBRARIES = libaweservxml.a

libaweservxml_a_SOURCES = ServXml_Qkxxxz.cpp ServXml_Qljsjgqr.cpp ServXml_Yccb.cpp ServXml_YccbHx.cpp ServXml_YccbEx.cpp ServWlcb.cpp ServXml_Fpjxzjs.cpp GlobalNetArg.cpp ServXml_NsrPara.cpp ServXml_Root.cpp ServXml_Zip.cpp StructOrganize.cpp InvUploadOrganize.cpp YccbOrganize.cpp GetResultOrganize.cpp ProtocolXML.cpp ProtocolCrc.cpp ProtocolCommon.cpp ProtocolStream.cpp AppProtocol.cpp  ServXml_InvUpload.cpp ServXml_InvUploadEx.cpp ServXml_InvUploadResult.cpp

INCLUDES = -I../../SYS -I../../DRV -I../../LIBDB -I../../LIB -I../JSKMANAGE -I../YWXML -I../ -I./ -I../../SSLLIB/acceptFramework/include
