#AWE-4000R Project

noinst_LIBRARIES = libaweskjywxml.a

#libaweskjywxml_a_SOURCES = SKJNETXML_QLJS.cpp SKJNETXML_QLJSJGQR.cpp SKJNETXML_WLCB.cpp SKJNETXML_FPSCJGHQ.cpp SKJNETXML_FPSC.cpp SKJYWXmlBase.cpp
libaweskjywxml_a_SOURCES = 

INCLUDES = -I../../SYS -I../../DRV -I../../DB -I../../LIB -I../COMMON -I../SERVXML -I../ -I./ 
