#AWE-4000R Project

noinst_LIBRARIES = libaweywxml.a

#libaweywxml_a_SOURCES = YWXML_SKSBQTYXXCX.cpp YWXML_BSPFPCX.cpp YWXML_BSPFPSH.cpp YWXML_JKHC.cpp YWXML_SJCB.cpp YWXML_TJXXCX.cpp CTjxxhz.cpp YWXML_JKSJCX.cpp YWXML_GPXXXP.cpp YWXML_GPXXXPJS.cpp YWXML_FPKJ.cpp YWXML_FPZF.cpp YWXML_FPCX.cpp YWXML_SKPBSP.cpp YWXML_BSPFPFF.cpp YWXML_LXXXXP.cpp YWXML_FPSSSC.cpp YWXML_FPGX.cpp YWXML_SKSBBHCX.cpp YWXML_SKPXXCX.cpp YWXML_BSPXXCX.cpp YWXML_SQSLCX.cpp YWXML_GPXXCX.cpp YWXML_KLBG.cpp YWXML_FPDR.cpp YWXML_FPBL.cpp YWXML_FJTH.cpp YWXML_BGZSKL.cpp YWXML_HQLXSJ.cpp YWXML_ERRUPINV.cpp \
#						NETXML_WLLQFP.cpp NETXML_LXXXSC.cpp NETXML_WLLQFPJGQR.cpp NETXML_FPSC.cpp NETXML_FPSCJGHQ.cpp NETXML_QLJS.cpp NETXML_WLCB.cpp YWXmlBase.cpp 
libaweywxml_a_SOURCES = NETXML_FPSC.cpp NETXML_FPSCJGHQ.cpp NETXML_QLJS.cpp NETXML_QLJSJGQR.cpp NETXML_WLCB.cpp YWXmlBase.cpp 

INCLUDES = -I../../SYS -I../../DRV -I../../LIBDB -I../../LIB -I../JSKMANAGE -I../ -I./ -I../SERVXML
